apps/01-web-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
  labels:
    app: web-nginx
spec:
  type: ClusterIP
  selector:
    app: web-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
