apps/01-web-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-nginx
  labels:
    app: web-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: web-nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-nginx
                port:
                  number: 80
